add canvas and symbol
Add canvas in the background and circle & square symbol and change some details

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8" />
-  <title>PHUTURE NOIZE PORTFOLIO</title>
+  <title>ALEXIS FLORES PORTFOLIO</title>
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
@@ -24,9 +24,9 @@
   <nav class="nav">
     <span>AF</span>
     <div>
-      <a href="#about">ABOUT</a>
-      <a href="#projects">PROJECTS</a>
-      <a href="#contact">CONTACT</a>
+      <a href="#about">SOBRE MI</a>
+      <a href="#projects">PROYECTOS</a>
+      <a href="#contact">CONTACTAME</a>
     </div>
   </nav>
 
@@ -40,11 +40,25 @@
     <p class="subtitle">
       WEB DEVELOPER
     </p>
+
+    <p class="pn-phrase">
+      Mi código es una extension de mi voluntad. No importa el bug o sistema; si hay una lógica, yo encontraré la salida.
+    </p>
+    
+    <div id="phuture-brand" class="brand-container">
+      <svg viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
+        <circle cx="50" cy="50" r="45" fill="none" stroke="#00ff9d" stroke-width="0.5" stroke-dasharray="10 5" />
+        <path d="M50 10 L50 90 M10 50 L90 50" stroke="#00ff9d" stroke-width="0.2" opacity="0.5" />
+        <rect x="35" y="35" width="30" height="30" fill="none" stroke="#00ff9d" stroke-width="2" />
+        <circle cx="50" cy="50" r="4" fill="#00ff9d" class="core-pulse" />
+      </svg>
+    </div>
+   
   </section>
 
   <!-- ABOUT -->
   <section class="section" id="about">
-    <h2 class="section-title">ABOUT ME</h2>
+    <h2 class="section-title">SOBRE MI</h2>
     <p class="section-text">
       3 años de experiencia como Desarrollador Web y 1 como Desarrollador de Software. Me especializo en el desarrollo de soluciones eficientes, priorizando la claridad del código. Entusiasta del aprendizaje continuo y en mejorar habilidades para ser un mejor desarrollador.
     </p>
@@ -52,7 +66,7 @@
 
   <!-- PROJECTS -->
   <section class="section" id="projects">
-    <h2 class="section-title">PROJECTS</h2>
+    <h2 class="section-title">PROYECTOS</h2>
 
     <div class="projects">
       <div class="project">
@@ -78,7 +92,7 @@
 
   <!-- CONTACT -->
   <section class="section" id="contact">
-    <h2 class="section-title">CONTACT</h2>
+    <h2 class="section-title">CONTACTAME</h2>
     <p class="section-text">
       Reach me for collaborations or digital experiments.
     </p>
@@ -92,10 +106,10 @@
 
   <!-- FOOTER -->
   <footer>
-    © 2026 · BLACK NOIZE SYSTEM
+    © 2026 · FLODEV.SH 
   </footer>
 
-
+  <canvas id="noise-canvas"></canvas>
   <script src="glitch.js"></script>
 </body>
 </html>
