--- a/index.html
+++ b/index.html
@@ -56,6 +56,47 @@
    
   </section>
 
+  <section class="experience-section">
+  <h2 class="glitch-active-text">FILE: /VAR/LOG/EXPERIENCE.sh</h2>
+  
+  <div class="timeline">
+    <div class="exp-item">
+      <div class="exp-dot"></div>
+      <div class="exp-content">
+        <h3 class="exp-title">Full Stack Developer <span class="exp-company">@ SinergiTec</span></h3>
+        <p class="exp-date">OCT 2023 - JUL 2025</p>
+        <p class="exp-desc">
+          Liderando el despliegue de arquitecturas escalables. Implementando protocolos de seguridad y optimización de flujos de datos bajo presión.
+        </p>
+        <div class="exp-tech">
+          <span>ReactNative</span>
+          <span>Node.js</span>
+          <span>HTML</span>
+          <span>CSS</span>
+          <span>JavaScript</span>
+          <span>Progress</span>
+        </div>
+      </div>
+    </div>
+
+    <div class="exp-item">
+      <div class="exp-dot"></div>
+      <div class="exp-content">
+        <h3 class="exp-title">Junior Fullstack Dev <span class="exp-company">@ Core_Systems</span></h3>
+        <p class="exp-date">MAR 2022 - DEC 2023</p>
+        <p class="exp-desc">
+          Desarrollo de módulos core para el sistema de gestión interna. Depuración de bugs críticos y mantenimiento de bases de datos.
+        </p>
+        <div class="exp-tech">
+          <span>JavaScript</span>
+          <span>PostgreSQL</span>
+          <span>Bash</span>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+    
   <!-- ABOUT -->
   <section class="section" id="about">
     <h2 class="section-title">SOBRE MI</h2>
