styling contact section
add cards in contact section, fixing mobile styles

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>ALEXIS FLORES PORTFOLIO</title>
   <link rel="stylesheet" href="styles.css" />
 </head>
@@ -24,6 +25,7 @@
   <nav class="nav">
     <span>AF</span>
     <div>
+      <a href="#experience">EXPERIENCIA</a>
       <a href="#about">SOBRE MI</a>
       <a href="#projects">PROYECTOS</a>
       <a href="#contact">CONTACTAME</a>
@@ -56,8 +58,8 @@
    
   </section>
 
-  <section class="experience-section">
-  <h2 class="glitch-active-text">FILE: /VAR/LOG/EXPERIENCE.sh</h2>
+  <section class="experience-section" id="experience">
+  <h2 class="glitch-active-text">$ ~/dev/EXPERIENCE.sh</h2>
   
   <div class="timeline">
     <div class="exp-item">
@@ -132,18 +134,46 @@
   </section>
 
   <!-- CONTACT -->
-  <section class="section" id="contact">
-    <h2 class="section-title">CONTACTAME</h2>
-    <p class="section-text">
-      Reach me for collaborations or digital experiments.
-    </p>
+  <section class="contact-section" id="contact">
+  <h2 class="glitch-active-text">$ ~/dev/COMMS.sh</h2>
+  
+  <div class="contact-grid">
+    <a href="https://x.com/a_flodev" target="_blank" rel="noopener noreferrer" class="contact-card">
+      <span class="card-icon">X</span>
+      <h3 class="card-title">ACCESS_PROTOCOL_01</h3>
+      <p class="card-desc">@a_flodev</p>
+      <div class="card-overlay"></div>
+    </a>
 
-    <div class="contact">
-      <span>EMAIL</span>
-      <span>GITHUB</span>
-      <span>LINKEDIN</span>
-    </div>
-  </section>
+    <a href="https://github.com/AlexisFlo" target="_blank" rel="noopener noreferrer" class="contact-card">
+      <span class="card-icon">GITHUB</span>
+      <h3 class="card-title">ACCESS_02</h3>
+      <p class="card-desc">/AlexisFlo</p>
+      <div class="card-overlay"></div>
+    </a>
+
+    <a href="https://www.linkedin.com/in/AlexisFloresF" target="_blank" rel="noopener noreferrer" class="contact-card">
+      <span class="card-icon">LINKEDIN</span>
+      <h3 class="card-title">ACCESS_PROTOCOL_03</h3>
+      <p class="card-desc">/in/alexisflo</p>
+      <div class="card-overlay"></div>
+    </a>
+
+    <a href="mailto:floresfernandezalexishr@gmail.com" title="Enviar un correo electrónico a Alexis al correo floresfernandezalexishr@gmail.com"
+              target="_blank"
+              rel="noopener noreferrer"class="contact-card">
+      <span class="card-icon">EMAIL</span>
+      <h3 class="card-title">DIRECT_ACCESS</h3>
+      <p class="card-desc">floresfernandezalexishr@gmail.com</p>
+      <div class="card-overlay"></div>
+    </a>
+
+  </div>
+
+  <p class="contact-message">
+    Transmitiendo datos cifrados. Para acceso directo, inicie una conexión segura.
+  </p>
+</section>
 
   <!-- FOOTER -->
   <footer>
