about me section
add info about me, with experience and styling this section

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <h3 class="exp-title">Full Stack Developer <span class="exp-company">@ SinergiTec</span></h3>
         <p class="exp-date">OCT 2023 - JUL 2025</p>
         <p class="exp-desc">
-          Liderando el despliegue de arquitecturas escalables. Implementando protocolos de seguridad y optimización de flujos de datos bajo presión.
+          Despliegue de arquitecturas FullStack y automatización vía WhatsApp, reduciendo llamadas de soporte en un 60%. Optimización de pipelines CI/CD con Rust para ahorro de costes y desarrollo de aplicaciones móviles multiplataforma con React Native, Supabase y Zustand.
         </p>
         <div class="exp-tech">
           <span>ReactNative</span>
@@ -76,6 +76,7 @@
           <span>HTML</span>
           <span>CSS</span>
           <span>JavaScript</span>
+          <span>TypeScript</span>
           <span>Progress</span>
         </div>
       </div>
@@ -84,10 +85,10 @@
     <div class="exp-item">
       <div class="exp-dot"></div>
       <div class="exp-content">
-        <h3 class="exp-title">Junior Fullstack Dev <span class="exp-company">@ Core_Systems</span></h3>
-        <p class="exp-date">MAR 2022 - DEC 2023</p>
+        <h3 class="exp-title">Desarrollador <span class="exp-company">@ ITGAM</span></h3>
+        <p class="exp-date">ENE 2023 - JUN 2023</p>
         <p class="exp-desc">
-          Desarrollo de módulos core para el sistema de gestión interna. Depuración de bugs críticos y mantenimiento de bases de datos.
+          Monitoreo de infraestructura de red y soporte técnico especializado. Colaboré en el diseño técnico y conexión para la remodelación de laboratorios de redes, además de apoyar en el desarrollo del sistema web de inventariado para la gestión de activos tecnológicos.
         </p>
         <div class="exp-tech">
           <span>JavaScript</span>
@@ -98,16 +99,8 @@
     </div>
   </div>
 </section>
-    
-  <!-- ABOUT -->
-  <section class="section" id="about">
-    <h2 class="section-title">SOBRE MI</h2>
-    <p class="section-text">
-      3 años de experiencia como Desarrollador Web y 1 como Desarrollador de Software. Me especializo en el desarrollo de soluciones eficientes, priorizando la claridad del código. Entusiasta del aprendizaje continuo y en mejorar habilidades para ser un mejor desarrollador.
-    </p>
-  </section>
-
-  <!-- PROJECTS -->
+  
+<!-- PROJECTS -->
   <section class="section" id="projects">
     <h2 class="section-title">PROYECTOS</h2>
 
@@ -120,18 +113,79 @@
       </div>
 
       <div class="project">
-        <h3>NOIZE INTERFACE</h3>
-        <p>Experimental UI inspired by audio distortion.</p>
-        <span>CSS · CANVAS</span>
+        <a href="https://www.huitzcloud.com/sazon-ojeda/"> 
+        <h3>HUITZ CLOUD</h3>
+        </a>
+        <p>Página para consulta de menú y hacer pedidos en línea.</p>
+        <span>REACT · TAILWIND · TYPESCRIPT</span>
       </div>
 
       <div class="project">
-        <h3>DATA MIRROR</h3>
-        <p>Minimal portfolio with glitch-based interactions.</p>
-        <span>VANILLA JS</span>
+        <a href="https://sinmayoresetiquetas.netlify.app/"> 
+        <h3>SIN MAYORES ETIQUETAS</h3>
+        </a>
+        <p>Sitio para la concientización de los estereotipos que se tienen o se generan con las personas de la tercera edad.</p>
+        <span>ASTRO · TAILWIND</span>
+      </div>
+
+      <div class="project">
+        <a href="https://elmayor.netlify.app/"> 
+        <h3>EL MAYOR</h3>
+        </a>
+        <p>Sitio de  un centro de apoyo para personas de la tercera edad.</p>
+        <span>ASTRO · TAILWIND</span>
       </div>
     </div>
-  </section>
+  </section>   
+
+  <!-- ABOUT -->
+  
+  <section class="section about-section" id="about">
+    <h2 class="section-title"><span class="prefix">USER_DATA:</span> /ALEXIS_FLORES/FULL_BIO</h2>
+
+    <div class="about-container">
+        <div class="data-block profile-text">
+            <span class="data-label">[BIOGRAPHY]</span>
+            <p>Soy Ingeniero en TICS con una especialidad que define todo lo que hago: <strong>Diseño de Aplicaciones Web</strong>. Para mí, desarrollar no es solo escupir código; es diseñar soluciones que realmente funcionen, priorizando siempre la claridad y la estructura de los datos.</p>
+            <p>Llevo más de 3 años en el mundo del software, moviéndome entre el desarrollo FullStack y la ingeniería de sistemas. Me gusta ensuciarme las manos con lenguajes de alto rendimiento como <strong>Rust y Go</strong>, pero siempre mantengo el foco en el usuario final. Un ejemplo de esto fue cuando implementé un agente de WhatsApp que logró reducir el 60% de las llamadas de soporte; no fue solo programar, fue entender dónde estaba el cuello de botella y solucionarlo.</p>
+            <p>Mi formación técnica comenzó como programador desde el bachillerato y se consolidó con la ingeniería, lo que me permite tener una visión completa: desde configurar redes y dar soporte a infraestructura, hasta construir apps móviles con React Native y Supabase o acelerar flujos de trabajo en CI/CD.</p>
+            <p>No me conformo con lo que ya sé. Soy un entusiasta del aprendizaje continuo porque en este mundo, si no evolucionas, te quedas atrás. Mi meta es simple: ser un mejor desarrollador hoy de lo que fue ayer, entregando software escalable, limpio y eficiente.</p>
+        </div>
+
+        <div class="info-grid">
+            <div class="data-block education-log">
+                <span class="data-label">[EDUCATION_HISTORY]</span>
+                <div class="edu-item">
+                    <span class="date">2024</span>
+                    <strong>TECNOLÓGICO NACIONAL DE MÉXICO CAMPUS ITGAM</strong>
+                    <p>Ingeniería en Tecnologías de la Información y Comunicación</p>
+                    <p class="specialty">Especialidad: Diseño de Aplicaciones Web</p>
+                </div>
+                <div class="edu-item">
+                    <span class="date">2018</span>
+                    <strong>CETIS NO. 54</strong>
+                    <p>Técnico en Programación</p>
+                </div>
+            </div>
+
+            <div class="data-block skills-log">
+                <span class="data-label">[TECHNICAL_COMPETENCIES]</span>
+                <div class="skill-group">
+                    <strong>CORE:</strong>
+                    <p>Rust, Go, Java, JS, SQL, HTML, CSS, Git, Linux, Astro, React, NextJS</p>
+                </div>
+                <div class="skill-group">
+                    <strong>SOFT_SKILLS:</strong>
+                    <p>Autodidacta, documentación de proyectos, pensamiento lógico, manejo de estructura y organización.</p>
+                </div>
+                <div class="skill-group">
+                    <strong>LANGUAGES:</strong>
+                    <p>Español (Nativo) / Inglés (Fluido)</p>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
 
   <!-- CONTACT -->
   <section class="contact-section" id="contact">
@@ -176,8 +230,24 @@
 </section>
 
   <!-- FOOTER -->
-  <footer>
-    © 2026 · FLODEV.SH 
+  <footer class="distopian-footer">
+    <div class="footer-line"></div>
+    <div class="footer-content">
+        <div class="footer-left">
+            <p class="system-status">SYSTEM STATUS: <span class="pulse-green">ONLINE</span></p>
+            <p class="copyright">© 2026 <span class="nickname">FLODEV.SH</span> // ALL RIGHTS RESERVED</p>
+        </div>
+        
+        <div class="footer-center">
+            <div class="barcode"></div>
+        </div>
+
+        <div class="footer-right">
+            <p class="encryption-tag">ENC_TYPE: AES-256-GCM</p>
+            <p class="shutdown-msg">DISCONNECTING IN: <span id="uptime-counter">00:00:00</span></p>
+        </div>
+    </div>
+    <div class="footer-glitch-strip"></div>
   </footer>
 
   <canvas id="noise-canvas"></canvas>
