--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
   <!-- ABOUT -->
   
   <section class="section about-section" id="about">
-    <h2 class="section-title"><span class="prefix">USER_DATA:</span> /ALEXIS_FLORES</h2>
+    <h2 class="section-title"><span class="prefix">USER_DATA</span></h2>
 
     <div class="about-container">
         <div class="data-block profile-text">
