fix: fixing about me text

--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
   <div class="contact-grid">
     <a href="https://x.com/a_flodev" target="_blank" rel="noopener noreferrer" class="contact-card">
       <span class="card-icon">X</span>
-      <h3 class="card-title">ACCESS_PROTOCOL_01</h3>
+      <h3 class="card-title">ACCESS_01</h3>
       <p class="card-desc">@a_flodev</p>
       <div class="card-overlay"></div>
     </a>
@@ -208,7 +208,7 @@
 
     <a href="https://www.linkedin.com/in/AlexisFloresF" target="_blank" rel="noopener noreferrer" class="contact-card">
       <span class="card-icon">LINKEDIN</span>
-      <h3 class="card-title">ACCESS_PROTOCOL_03</h3>
+      <h3 class="card-title">ACCESS_03</h3>
       <p class="card-desc">/in/alexisflo</p>
       <div class="card-overlay"></div>
     </a>
