add new experience

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     </p>
 
     <p class="pn-phrase">
-      Mi código es una extension de mi voluntad. No importa el bug o sistema; si hay una lógica, yo encontraré la salida.
+      El código es una extension de mi voluntad.
     </p>
     
     <div id="phuture-brand" class="brand-container">
@@ -61,6 +61,26 @@
   <section class="experience-section" id="experience">
   <h2 class="glitch-active-text">$ ~/dev/EXPERIENCE.sh</h2>
   
+  <div class="timeline">
+    <div class="exp-item">
+      <div class="exp-dot"></div>
+      <div class="exp-content">
+        <h3 class="exp-title">Frontend Developer Jr <span class="exp-company">@ Airon Tools</span></h3>
+        <p class="exp-date">FEB 2026</p>
+        <p class="exp-desc">
+          Diseño y desarrollo de aplicacion web, utilizando React-router, aplicando estilos con Tailwind, todo conectado a una base de datos en Mongo, la aplicación es para uso interno de la empresa.
+        </p>
+        <div class="exp-tech">
+          <span>React</span>
+          <span>Node.js</span>
+          <span>HTML</span>
+          <span>CSS</span>
+	  <span>Tailwind</span>
+          <span>TypeScript</span>
+        </div>
+      </div>
+    </div>
+
   <div class="timeline">
     <div class="exp-item">
       <div class="exp-dot"></div>
